--- a/ERecruteApp-front/src/app/sidebar/sidebar.component.html
+++ b/ERecruteApp-front/src/app/sidebar/sidebar.component.html
@@ -38,7 +38,7 @@
         </li>
         <li class="xn-title">Navigation</li>
         <li>
-            <a routerLink="/admin"><span class="fa fa-desktop"></span> <span class="xn-text">Tableau de bord</span></a>
+            <a routerLink="/criteres"><span class="fa fa-desktop"></span> <span class="xn-text">Tableau de bord</span></a>
         </li>
         <li *ngIf="authority === 'admin'" class="xn-openable">
             <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Utilisateurs</span></a>
@@ -56,7 +56,7 @@
                 </ul>
         </li>
         <li>
-            <a href="postes.html"><span class="fa fa-desktop"></span> <span class="xn-text">Postes</span></a>
+            <a routerLink="/postes"><span class="fa fa-desktop"></span> <span class="xn-text">Postes</span></a>
         </li>
         <li class="xn-openable">
             <a href="#"><span class="fa fa-file-text-o"></span> <span class="xn-text">Recrutements</span></a>
