--- a/ERecruteApp-front/src/app/cvtheque/cvtheque.component.html
+++ b/ERecruteApp-front/src/app/cvtheque/cvtheque.component.html
@@ -86,7 +86,7 @@
                             <div class="profile-data-title">{{cv.posteDesire}}</div>
                         </div>
                         <div class="profile-controls">
-                            <a [routerLink]="['/cv', cv.codeCV]" class="profile-control-left"><span
+                            <a [routerLink]="['/erecrute/cv', cv.codeCV]" class="profile-control-left"><span
                                     class="fa fa-pencil"></span></a>
                             <a href="#" class="profile-control-right"><span class="fa fa-times"></span></a>
                         </div>
