csv mais y a problem f date

--- a/ERecruteApp-front/src/app/sidebar/sidebar.component.html
+++ b/ERecruteApp-front/src/app/sidebar/sidebar.component.html
@@ -56,7 +56,7 @@
                 </ul>
         </li>
         <li>
-            <a href=""><span class="fa fa-desktop"></span> <span class="xn-text">Postes</span></a>
+            <a href="erecrute/poste"><span class="fa fa-desktop"></span> <span class="xn-text">Postes</span></a>
         </li>
         <li class="xn-openable">
             <a href="#"><span class="fa fa-file-text-o"></span> <span class="xn-text">Recrutements</span></a>
