--- a/ERecruteApp-front/src/app/app.component.html
+++ b/ERecruteApp-front/src/app/app.component.html
@@ -74,7 +74,7 @@
   <audio id="audio-fail" src="../assets/audio/fail.mp3" preload="auto"></audio>
   <!-- END PRELOADS --> 
   </div>
-  <div *ngIf="!authority" class="login-container">
+  <div *ngIf="!authority" class="login-container lightmode">
       <app-login></app-login>
     </div>
   <!-- END SCRIPTS -->
