--- a/ERecruteApp-front/src/app/sidebar/sidebar.component.html
+++ b/ERecruteApp-front/src/app/sidebar/sidebar.component.html
@@ -3,7 +3,12 @@
     <!-- START X-NAVIGATION -->
     <ul class="x-navigation">
         <li class="xn-logo">
-            <a href="index.html">E-Recrute</a>
+            <div>
+                <a href="index.html"><img style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 50%;" height="50" src="assets/img/hr-path-logo.png" /></a>
+            </div>
             <a href="#" class="x-navigation-control"></a>
         </li>
         <li class="xn-profile">
