--- a/ERecruteApp-front/src/app/add-utilisateur/add-utilisateur.component.html
+++ b/ERecruteApp-front/src/app/add-utilisateur/add-utilisateur.component.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary">Ajouter</button>
+                    <button class="btn btn-success">Ajouter</button>
                     <div *ngIf="f.submitted && isSignUpFailed" class="btn btn-success">
                       Ajout echoué!<br/>{{errorMessage}}
                     </div>
