--- a/ERecruteApp-front/src/assets/css/theme-default.css
+++ b/ERecruteApp-front/src/assets/css/theme-default.css
@@ -3963,7 +3963,7 @@ background: #1caf9a !important;
   color: #FFF;
 }
 .login-container.lightmode {
-  background: url("../img/backgrounds/wall_1.jpg") left top no-repeat;
+  background: url("../img/backgrounds/bg2.jpg") left top no-repeat;
 }
 .login-container.lightmode .login-box .login-body {
   background: rgba(255, 255, 255, 0.2);
