--- a/ERecruteApp-front/src/assets/css/theme-white.css
+++ b/ERecruteApp-front/src/assets/css/theme-white.css
@@ -28,12 +28,12 @@
   clear: both;
 }
 .background-colorful {
-  background: linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -o-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -moz-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -ms-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #1caf9a), color-stop(1, #95b75d));
+  background: linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -o-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -moz-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -webkit-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -ms-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #3285c5), color-stop(1, #95b75d));
 }
 /* EOF PREDEFINED CLASSES */
 html * {
@@ -241,7 +241,7 @@ body {
   padding-right: 50px;
 }
 body.page-container-boxed {
-  background: url("../img/backgrounds/wall_1.jpg") left top no-repeat fixed;
+  background: url("../img/backgrounds/bg2.jpg") left top no-repeat fixed;
   padding: 20px 0px;
 }
 body.page-container-boxed .page-container {
@@ -320,7 +320,7 @@ body.page-container-boxed .page-container {
   transition: color 200ms ease;
 }
 .x-navigation li > a:hover {
-  background: #1caf9a;
+  background: #3285c5;
   color: #fff;
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -351,11 +351,11 @@ body.page-container-boxed .page-container {
   border-bottom-color: #fff;
 }
 .x-navigation li > ul li > a:hover {
-  background: #1caf9a;
+  background: #3285c5;
   color: #ffffff;
 }
 .x-navigation li > ul li.active > a {
-  background: #1caf9a;
+  background: #3285c5;
   color: #ffffff;
 }
 .x-navigation li.xn-openable:before {
@@ -378,7 +378,7 @@ color:#fff;
   color:#fff;
 }
 .x-navigation li.active > a {
-  background: #1caf9a;
+  background: #3285c5;
   color:#fff;
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -465,22 +465,22 @@ color:#fff;
   text-shadow: none;
 }
 .x-navigation.x-navigation-horizontal > li > a:hover {
-  background: #26344e;
+  background: #329ce2;
 }
 .x-navigation.x-navigation-horizontal > li > a:hover .fa,
 .x-navigation.x-navigation-horizontal > li > a:hover .glyphicon {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .x-navigation.x-navigation-horizontal > li > a .fa,
 .x-navigation.x-navigation-horizontal > li > a .glyphicon {
   color: #6c7177;
 }
 .x-navigation.x-navigation-horizontal > li.active > a {
-  background: #26344e;
+  background: #329ce2;
 }
 .x-navigation.x-navigation-horizontal > li.active > a .fa,
 .x-navigation.x-navigation-horizontal > li.active > a .glyphicon {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .x-navigation.x-navigation-horizontal > li ul {
   width: 220px;
@@ -794,7 +794,7 @@ color:#fff;
 }
 .x-navigation.x-navigation-custom li > a:hover .fa,
 .x-navigation.x-navigation-custom li > a:hover .glyphicon {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .x-navigation.x-navigation-custom li > a .fa,
 .x-navigation.x-navigation-custom li > a .glyphicon {
@@ -805,7 +805,7 @@ color:#fff;
 }
 .x-navigation.x-navigation-custom li.active > a .fa,
 .x-navigation.x-navigation-custom li.active > a .glyphicon {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .x-navigation.x-navigation-custom > li > a {
   padding: 12px 10px 12px 12px;
@@ -821,7 +821,7 @@ color:#fff;
 .x-navigation.x-navigation-custom > li.active > a {
   color: #FFF;
   background: #212e44;
-  border-left: 3px solid #1caf9a;
+  border-left: 3px solid #3285c5;
 }
 .x-navigation.x-navigation-custom > li.xn-openable:before {
   color: #CCC;
@@ -913,10 +913,10 @@ color:#fff;
  color: #fff;
  height: 50px;
  text-align: center;
- background: #1caf9a;
+ background: #3285c5;
 }
 .x-navigation > li.xn-logo > a:first-child:hover {
-  background-color: #1caf9a;
+  background-color: #3285c5;
 }
 .x-navigation > li.xn-profile {
   padding: 0px;
@@ -966,10 +966,10 @@ color:#fff;
   background: #95b75d;
 }
 .x-navigation .informer.informer-info {
-  background: #1caf9a;
+  background: #3285c5;
 }
 .x-navigation .informer.informer-warning {
-  background: #1caf9a;
+  background: #3285c5;
 }
 .x-navigation .informer.informer-danger {
   background: #E04B4A;
@@ -1372,7 +1372,7 @@ a.list-group-item:focus {
   background: #95b75d;
 }
 .list-group-status.status-away:after {
-  background: #1caf9a;
+  background: #3285c5;
 }
 .list-group-status.status-offline:after {
   background: #CCC;
@@ -1442,10 +1442,10 @@ a.list-group-item:focus {
   border-top-color: #95b75d;
 }
 .panel.panel-info {
-  border-top-color: #1caf9a;
+  border-top-color: #3285c5;
 }
 .panel.panel-warning {
-  border-top-color: #1caf9a;
+  border-top-color: #3285c5;
 }
 .panel.panel-danger {
   border-top-color: #E04B4A;
@@ -1454,12 +1454,12 @@ a.list-group-item:focus {
   content: "";
   width: 100%;
   height: 2px;
-  background: linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -o-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -moz-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -ms-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #1caf9a), color-stop(1, #95b75d));
+  background: linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -o-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -moz-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -webkit-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -ms-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #3285c5), color-stop(1, #95b75d));
   display: block;
   left: 0px;
   top: 0px;
@@ -1529,7 +1529,7 @@ a.list-group-item:focus {
   position: absolute;
   bottom: -15px;
   left: 50%;
-  background: #1caf9a;
+  background: #3285c5;
   color: #FFF;
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
@@ -1550,7 +1550,7 @@ a.list-group-item:focus {
   background: #95b75d;
 }
 .panel .panel-body.panel-body-image .panel-body-inform.inform-warning {
-  background: #1caf9a;
+  background: #3285c5;
 }
 .panel .panel-body.panel-body-image .panel-body-inform.inform-danger {
   background: #E04B4A;
@@ -1690,12 +1690,12 @@ ul.panel-controls > li > a.control-success {
   border-color: #95b75d;
 }
 ul.panel-controls > li > a.control-info {
-  color: #1caf9a;
-  border-color: #1caf9a;
+  color: #3285c5;
+  border-color: #3285c5;
 }
 ul.panel-controls > li > a.control-warning {
-  color: #1caf9a;
-  border-color: #1caf9a;
+  color: #3285c5;
+  border-color: #3285c5;
 }
 ul.panel-controls > li > a.control-danger {
   color: #E04B4A;
@@ -1777,10 +1777,10 @@ ul.panel-controls > li > .dropdown-menu:before {
   color: #95b75d;
 }
 .panel.panel-info .panel-body-pricing small {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .panel.panel-warning .panel-body-pricing small {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .panel.panel-danger .panel-body-pricing small {
   color: #E04B4A;
@@ -1883,10 +1883,10 @@ ul.panel-controls > li > .dropdown-menu:before {
   border-bottom-color: #1e293d;
 }
 .x-navigation li > .panel.panel-info:after {
-  border-bottom-color: #1caf9a;
+  border-bottom-color: #3285c5;
 }
 .x-navigation li > .panel.panel-warning:after {
-  border-bottom-color: #1caf9a;
+  border-bottom-color: #3285c5;
 }
 .x-navigation li > .panel.panel-danger:after {
   border-bottom-color: #E04B4A;
@@ -2054,8 +2054,8 @@ ul.panel-controls > li > .dropdown-menu:before {
   border-color: #2b3b58;
 }
 .btn-info {
-  background-color: #1caf9a;
-  border-color: #1caf9a;
+  background-color: #3285c5;
+  border-color: #3285c5;
 }
 .btn-info:hover,
 .btn-info:focus,
@@ -2123,7 +2123,7 @@ ul.panel-controls > li > .dropdown-menu:before {
   color: #fe970a;
 }
 .btn.btn-rounded.btn-info {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .btn.btn-rounded.btn-info:hover,
 .btn.btn-rounded.btn-info:focus,
@@ -2323,10 +2323,10 @@ input[type=checkbox] {
 .has-warning .radio-inline,
 .has-warning .checkbox-inline,
 .has-warning .form-control-feedback {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .has-warning .form-control {
-  border-color: #1caf9a;
+  border-color: #3285c5;
 }
 .has-error .help-block,
 .has-error .control-label,
@@ -2391,11 +2391,11 @@ label.valid {
 }
 .label-info,
 .badge-info {
-  background-color: #1caf9a;
+  background-color: #3285c5;
 }
 .label-warning,
 .badge-warning {
-  background-color: #1caf9a;
+  background-color: #3285c5;
 }
 .label-danger,
 .badge-danger {
@@ -2415,12 +2415,12 @@ label.valid {
   border-color: #90b456;
 }
 .alert-info {
-  background-color: #1caf9a;
+  background-color: #3285c5;
   color: #FFF;
   border-color: #36b7e3;
 }
 .alert-warning {
-  background-color: #1caf9a;
+  background-color: #3285c5;
   color: #FFF;
   border-color: #fe9e19;
 }
@@ -2630,13 +2630,13 @@ blockquote.pull-right {
   border-left-color: #95b75d;
 }
 .blockquote-info {
-  border-left-color: #1caf9a;
+  border-left-color: #3285c5;
 }
 .blockquote-danger {
   border-left-color: #E04B4A;
 }
 .blockquote-warning {
-  border-left-color: #1caf9a;
+  border-left-color: #3285c5;
 }
 .text-title {
   font-weight: 600;
@@ -2707,10 +2707,10 @@ blockquote.pull-right {
   color: #95b75d !important;
 }
 .text-info {
-  color: #1caf9a !important;
+  color: #3285c5 !important;
 }
 .text-warning {
-  color: #1caf9a !important;
+  color: #3285c5 !important;
 }
 .text-danger {
   color: #E04B4A !important;
@@ -2725,11 +2725,11 @@ blockquote.pull-right {
 }
 .bg-info {
   color: #fff;
-  background-color: #1caf9a;
+  background-color: #3285c5;
 }
 .bg-warning {
   color: #fff;
-  background-color: #1caf9a;
+  background-color: #3285c5;
 }
 .bg-danger {
   color: #fff;
@@ -2769,21 +2769,21 @@ blockquote.pull-right {
   background-color: #95b75d;
 }
 .progress-bar-warning {
-  background-color: #1caf9a;
+  background-color: #3285c5;
 }
 .progress-bar-danger {
   background-color: #E04B4A;
 }
 .progress-bar-info {
-  background-color: #1caf9a;
+  background-color: #3285c5;
 }
 .progress-bar-colorful {
-  background: linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -o-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -moz-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -ms-linear-gradient(left, #E04B4A 0%, #1caf9a 50%, #95b75d 100%);
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #1caf9a), color-stop(1, #95b75d));
+  background: linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -o-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -moz-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -webkit-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -ms-linear-gradient(left, #E04B4A 0%, #3285c5 50%, #95b75d 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, #E04B4A), color-stop(0.5, #3285c5), color-stop(1, #95b75d));
 }
 /* EOF PROGRESS BARS */
 /* SWITCH */
@@ -3387,17 +3387,17 @@ td.dataTables_empty {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#95b75d, endColorstr=#89ad4d, GradientType=0);
 }
 .widget.widget-info {
-  background: #1caf9a !important;
+  background: #3285c5 !important;
 }
 .widget.widget-warning {
-  background: #1caf9a;
-  background: -moz-linear-gradient(top, #1caf9a 0%, #fe970a 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1caf9a), color-stop(100%, #fe970a));
-  background: -webkit-linear-gradient(top, #1caf9a 0%, #fe970a 100%);
-  background: -o-linear-gradient(top, #1caf9a 0%, #fe970a 100%);
-  background: -ms-linear-gradient(top, #1caf9a 0%, #fe970a 100%);
-  background: linear-gradient(to bottom, #1caf9a 0%, #fe970a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#1caf9a, endColorstr=#fe970a, GradientType=0);
+  background: #3285c5;
+  background: -moz-linear-gradient(top, #3285c5 0%, #fe970a 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3285c5), color-stop(100%, #fe970a));
+  background: -webkit-linear-gradient(top, #3285c5 0%, #fe970a 100%);
+  background: -o-linear-gradient(top, #3285c5 0%, #fe970a 100%);
+  background: -ms-linear-gradient(top, #3285c5 0%, #fe970a 100%);
+  background: linear-gradient(to bottom, #3285c5 0%, #fe970a 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#3285c5, endColorstr=#fe970a, GradientType=0);
 }
 .widget.widget-danger {
   background: #E04B4A;
@@ -3660,8 +3660,8 @@ td.dataTables_empty {
   background: #90b456;
 }
 .tile.tile-warning {
-  background: #1caf9a;
-  border-color: #1caf9a;
+  background: #3285c5;
+  border-color: #3285c5;
 }
 .tile.tile-warning:hover {
   background: #fe9e19;
@@ -3674,8 +3674,8 @@ td.dataTables_empty {
   background: #af4342;
 }
 .tile.tile-info {
-  background: #1caf9a;
-  border-color: #1caf9a;
+  background: #3285c5;
+  border-color: #3285c5;
 }
 .tile.tile-info:hover {
   background: #36b7e3;
@@ -3713,10 +3713,10 @@ td.dataTables_empty {
   color: #95b75d;
 }
 .tile .informer.informer-info {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .tile .informer.informer-warning {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .tile .informer.informer-danger {
   color: #E04B4A;
@@ -3956,7 +3956,7 @@ td.dataTables_empty {
   color: #FFF;
 }
 .login-container .login-box .login-body .login-subtitle a {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .login-container .login-box .login-footer {
   width: 100%;
@@ -3968,7 +3968,7 @@ td.dataTables_empty {
   color: #FFF;
 }
 .login-container.lightmode {
-  background: url("../img/backgrounds/wall_1.jpg") left top no-repeat;
+  background: url("../img/backgrounds/bg2.jpg") left top no-repeat;
 }
 .login-container.lightmode .login-box .login-body {
   background: rgba(255, 255, 255, 0.2);
@@ -4298,10 +4298,10 @@ td.dataTables_empty {
   border-left-color: #95b75d;
 }
 .tasks .task-item.task-info {
-  border-left-color: #1caf9a;
+  border-left-color: #3285c5;
 }
 .tasks .task-item.task-warning {
-  border-left-color: #1caf9a;
+  border-left-color: #3285c5;
 }
 .tasks .task-item.task-danger {
   border-left-color: #E04B4A;
@@ -4378,13 +4378,13 @@ td.dataTables_empty {
   background: #1e293d;
 }
 .mpb .mpb-progress.mpb-warning {
-  background: #1caf9a;
+  background: #3285c5;
 }
 .mpb .mpb-progress.mpb-success {
   background: #95b75d;
 }
 .mpb .mpb-progress.mpb-info {
-  background: #1caf9a;
+  background: #3285c5;
 }
 .mpb .mpb-progress.mpb-danger {
   background: #E04B4A;
@@ -4624,7 +4624,7 @@ td.dataTables_empty {
   padding-bottom: 15px;
 }
 .faq .faq-highlight {
-  background: #1caf9a;
+  background: #3285c5;
   color: #FFF;
   padding: 0px 5px;
   -moz-border-radius: 3px;
@@ -4931,7 +4931,7 @@ td.dataTables_empty {
   height: 36px;
   width: 36px;
   top: 10px;
-  background: #1caf9a;
+  background: #3285c5;
   -moz-border-radius: 5px 0px 0px 5px;
   -webkit-border-radius: 5px 0px 0px 5px;
   border-radius: 5px 0px 0px 5px;
@@ -5090,13 +5090,13 @@ td.dataTables_empty {
   border-left-color: #1e293d;
 }
 .mail .mail-item.mail-info {
-  border-left-color: #1caf9a;
+  border-left-color: #3285c5;
 }
 .mail .mail-item.mail-success {
   border-left-color: #95b75d;
 }
 .mail .mail-item.mail-warning {
-  border-left-color: #1caf9a;
+  border-left-color: #3285c5;
 }
 .mail .mail-item.mail-danger {
   border-left-color: #E04B4A;
@@ -5116,7 +5116,7 @@ td.dataTables_empty {
   cursor: pointer;
 }
 .mail .mail-item .mail-star.starred {
-  color: #1caf9a;
+  color: #3285c5;
 }
 .mail .mail-item .mail-star.starred .fa-star-o:before {
   content: "\f005";
@@ -6368,12 +6368,12 @@ div.tagsinput div {
 }
 .fc-event-skin.orange,
 .fc-event.orange {
-  background-color: #1caf9a;
+  background-color: #3285c5;
   border-color: #fe970a;
 }
 .fc-event-skin.blue,
 .fc-event.blue {
-  background-color: #1caf9a;
+  background-color: #3285c5;
   border-color: #29b2e1;
 }
 /* eof calendar */
