--- a/ERecruteApp-front/src/app/criteres/criteres.component.html
+++ b/ERecruteApp-front/src/app/criteres/criteres.component.html
@@ -26,6 +26,7 @@
                             <li><a href="#tab-five" role="tab" data-toggle="tab">Type de Contrat</a></li>
                             <li><a href="#tab-six" role="tab" data-toggle="tab">Type de Profil</a></li>
                             <li><a href="#tab-seven" role="tab" data-toggle="tab">Mots cles</a></li>
+                            <li><a href="#tab-height" role="tab" data-toggle="tab">Societe</a></li>
                         </ul>                            
                         <div class="panel-body tab-content">
                             <div class="tab-pane active" id="tab-first">
@@ -49,6 +50,9 @@
                             <div class="tab-pane" id="tab-seven">
                                 <app-mot-cles></app-mot-cles>
                             </div>
+                            <div class="tab-pane" id="tab-height">
+                                    <app-societe></app-societe>
+                                </div>
                         </div>
                     </div>                                                   
                     <!-- END TABS -->                        
