--- a/ERecruteApp-front/src/app/add-profil/add-profil.component.html
+++ b/ERecruteApp-front/src/app/add-profil/add-profil.component.html
@@ -18,7 +18,7 @@
             <div class="block">
                 <form #f="ngForm" (ngSubmit)="createProfilFormation(f.value)" role="form" class="form-horizontal"
                     id="wizard-validation">
-                    <div class="wizard wizard-validation">
+                    <div class="wizard">
                         <ul>
                             <li>
                                 <a href="#step-7">
@@ -127,53 +127,48 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="form-group">
+                                    <button type="submit" class="btn btn-success">Create</button>
+                                </div>
                             <!--  </form>-->
                         </div>
                         <div id="step-8">
+                            <!-- START DEFAULT DATATABLE -->
+          <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Liste des formation</h3>
+                    <ul class="panel-controls">
+                        <li><button type="button" data-toggle="modal" data-target="#ModalFormation" class="btn btn-info">Ajouter Formation
+                            </button></li>
+                    </ul>
+                </div>
+                <div class="panel-body">
+                    <table class="table datatable">
+                        <thead>
+                            <tr>
+                                <th>Intitulé</th>
+                                <th>Établissement</th>
+                                <th>Adresse</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let formation of formations">
+                                <td>{{formation.intitule}}</td>
+                                <td>{{formation.etablissement}}</td>
+                                <td>{{formation.lieu}}</td>
+                                <td>
+                                  
+                                </td>
+                            </tr>
+                            
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- END DEFAULT DATATABLE -->
 
-                            <div class="form-group">
-                                <label class="col-md-2 control-label">Intitulé</label>
-                                <span class="col-md-3">
-                                    <input required ngModel type="text" class="form-control" name="intitule"
-                                        [(ngModel)]="formation.intitule" />
-                                </span>
-                                <label class="col-md-2 control-label">Établissement</label>
-                                <span class="col-md-3">
-                                    <input required ngModel type="text" class="form-control" name="etablissement"
-                                        [(ngModel)]="formation.etablissement" />
-                                </span>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 control-label">Adresse</label>
-                                <div class="col-md-6">
-                                    <input required ngModel type="text" class="form-control" name="lieu"
-                                        [(ngModel)]="formation.lieu" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 control-label">Date Début</label>
-                                <span class="col-md-3">
-                                    <input required ngModel type="text" class="form-control datepicker"
-                                        value="2014-08-04" name="dateDebut" [(ngModel)]="formation.dateDebut" />
-                                </span>
-                                <label class="col-md-2 control-label">Date Fin</label>
-                                <span class="col-md-3">
-                                    <input required ngModel type="text" class="form-control datepicker"
-                                        value="2014-08-04" name="dateFin" [(ngModel)]="formation.dateFin" />
-                                </span>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-md-2 control-label">Détail</label>
-                                <span class="col-md-3">
-                                    <textarea required ngModel class="form-control" rows="3" name="details"
-                                        [(ngModel)]="formation.details"></textarea>
-                                </span>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-success">Create</button>
-                            </div>
+                            
 
                         </div>
                         <!--
@@ -269,3 +264,78 @@
 
 </div>
 <!-- PAGE CONTENT WRAPPER -->
+
+<!-- MODALS -->
+<div id="ModalFormation" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="taskEditModalHead"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+                        class="sr-only">Fermer</span></button>
+                <h4 class="modal-title" id="taskEditModalHead">Fromations du CV</h4>
+              
+            </div>
+            <form class="form-horizontal" #f_formation="ngForm" (ngSubmit)="createFormation(f_formation.value)">
+                <div class="modal-body">
+
+                    <tr></tr>
+                    <h3>Ajouter une nouvelle formation</h3>
+                    <tr></tr>
+                    <div class="col-md-12">
+
+
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Intitulé</label>
+                            <div class="col-md-10">
+                                <input required ngModel type="text" class="form-control" name="intitule"
+                                    [(ngModel)]="formation.intitule" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Établissement</label>
+                            <div class="col-md-10">
+                                <input required ngModel type="text" class="form-control" name="etablissement"
+                                    [(ngModel)]="formation.etablissement" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Adresse</label>
+                            <div class="col-md-10">
+                                <input required ngModel type="text" class="form-control" name="lieu"
+                                    [(ngModel)]="formation.lieu" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Date Début</label>
+                            <div class="col-md-5">
+                                <input required ngModel type="text" class="form-control datepicker" value="2014-08-04"
+                                    name="dateDebut" [(ngModel)]="formation.dateDebut" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Date Fin</label>
+                            <div class="col-md-5">
+                                <input required ngModel type="text" class="form-control datepicker" value="2014-08-04"
+                                    name="dateFin" [(ngModel)]="formation.dateFin" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Détail</label>
+                            <div class="col-md-10">
+                                <textarea required ngModel class="form-control" rows="5" name="details"
+                                    [(ngModel)]="formation.details"></textarea>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- END MODALS -->
